Remove iisExpress launch settings, listen on all IPs

--- a/src/MOnGoL.Host.ServerSideBlazor/Properties/launchSettings.json
+++ b/src/MOnGoL.Host.ServerSideBlazor/Properties/launchSettings.json
@@ -1,25 +1,10 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:64768",
-      "sslPort": 0
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "MOnGoL.BlazorHost": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://0.0.0.0;http://::/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
